--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <header class="header">
         <div class="container">
 
-            <a href="./index.html" class="logo">
+            <!-- <a href="./index.html" class="logo">
                 <img src="./image/logo.png" alt="logo image">
                 <span>entergy</span>
-            </a>
+            </a> -->
 
             <nav class="navbar">
 
